[package]
name = "cv-convert-generate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.4", features = ["derive"] }
indexmap = { version = "1.9.2", features = ["serde"] }
itertools = "0.10.5"
once_cell = "1.17.0"
proc-macro2 = "1.0.51"
quote = "1.0.23"
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.7.1"
unzip-n = "0.1.2"
