[package]
name = 'cv-convert'
description = 'Type conversions among famous Rust computer vision libraries'
version = '0.25.0'
authors = ['jerry73204 <jerry73204@gmail.com>']
edition = '2021'
documentation = 'https://docs.rs/cv-convert/'
repository = 'https://github.com/jerry73204/rust-cv-convert.git'
homepage = 'https://github.com/jerry73204/rust-cv-convert/'
readme = 'README.md'
license = 'MIT'

[package.metadata.docs.rs]
features = ['docs-only']

[features]
default = [
    'opencv',
    'image',
    'tch',
    'imageproc',
    'tch',
    'nalgebra',
    'ndarray',
]
docs-only = [
    'tch/doc-only',
]

[dev-dependencies]
approx = '0.5.1'
itertools = '0.11.0'
rand = '0.8.5'

[dependencies]
anyhow = '1.0.53'
num-traits = '0.2.15'
slice-of-array = '0.3.1'
half = '2.3.1'
image = { version = "0.24", optional = true }
imageproc = { version = "0.23", optional = true }
tch = { version = "0.14", optional = true }
nalgebra = { version = "0.32", optional = true }
ndarray = { version = "0.15", optional = true }

[dependencies.opencv]
version = "0.85"
default-features = false
features = ["calib3d"]
optional = true
